hours with no more slots can't be selected

--- a/src/App.css
+++ b/src/App.css
@@ -403,6 +403,10 @@ input[type="checkbox"] {
   display: none;
 }
 
+input[type="checkbox"][disabled] ~ label {
+  color: rgb(170, 170, 170);
+}
+
 label {
   display: inline-block;
   box-sizing: border-box;
